2003-02-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* textutil.man: Added two new commands,
	* textutil.tcl: ::textutil::adjust::listPredefined and
	                ::textutil::adjust::getPredefined to the
			package. They allow the user of the package to
			find the names and full paths of the hyphenation
			files coming with the package itself, making their
			use easier.

2003-01-27  Andreas Kupries  <andreask@activestate.com>

	* expander.man: Fixed typo in documentation.

2003-01-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* adjust_hyph.test: Rewrote the file into a proper testsuite.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* expander.man: More semantic markup, less visual one.
	* textutil.man:

2003-01-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* textutil.tcl: Changed patchlevel in provide to match the
	  ifneeded in pkgIndex.tcl.

2002-08-11  vogeler <vogeler@users.sourceforge.net>

        * adjust.tcl: added hyphenation (TeX). Hyphenation has been
          tested  for german, english, italian and spanish

2002-04-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

        * expander.man: Fixed typo.

2002-03-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

        * expander.man: New file, doctools manpage.

2002-03-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

        * expander.tcl (Op_expand): Fix for SF Bug #530056. Added code
          checking start and end levels for pushed/popped contexts and
          alert the caller if the numbers do not match, indicating that
          the macros pushed more or less contexts than popped.

2002-02-26  Joe English  <jenglish@users.sourceforge.net

        * tabify.tcl, tabify.test: fix for #521590,
          [tabify2 ""] and [untabify2 ""] raised an error.

2002-02-14  Tcl Project  <andreas_kupries@users.sourceforge.net>

        * expander.tcl: Frink run.
