@@ -30,6 +30,11 @@ if {$::textutil::HaveStrRepeat} {
     proc ::textutil::strRepeat {char num} {
 	return [string repeat $char $num]
     }
+
+    proc ::textutil::blank {n} {
+	return [string repeat " " $num]
+    }
+
 } else {
     proc ::textutil::strRepeat {char num} {
 	if {$num <= 0} {
@@ -50,8 +55,67 @@ if {$::textutil::HaveStrRepeat} {
 	    return "$char[strRepeat $char [incr num -1]]"
 	}
     }
+
+    proc ::textutil::blank {n} {
+	return [strRepeat " " $n]
+    }
 }
 
+
+# @c Removes the last character from the given <a string>.
+#
+# @a string: The string to manipulate.
+#
+# @r The <a string> without its last character.
+#
+# @i chopping
+
+proc ::textutil::chop {string} {
+    return [string range $string 0 [expr {[string length $string]-2}]]
+}
+
+
+
+# @c Removes the first character from the given <a string>.
+# @c Convenience procedure.
+#
+# @a string: string to manipulate.
+#
+# @r The <a string> without its first character.
+#
+# @i tail
+
+proc ::textutil::tail {string} {
+    return [string range $string 1 end]
+}
+
+
+
+# @c Capitalizes first character of the given <a string>.
+# @c Complementary procedure to <p ::textutil::uncap>.
+#
+# @a string: string to manipulate.
+#
+# @r The <a string> with its first character capitalized.
+#
+# @i capitalize
+
+proc ::textutil::cap {string} {
+    return [string toupper [string index $string 0]][string range $string 1 end]
+}
+
+# @c unCapitalizes first character of the given <a string>.
+# @c Complementary procedure to <p ::textutil::cap>.
+#
+# @a string: string to manipulate.
+#
+# @r The <a string> with its first character uncapitalized.
+#
+# @i uncapitalize
+
+proc ::textutil::uncap {string} {
+    return [string tolower [string index $string 0]][string range $string 1 end]
+}
 
 
 source [ file join [ file dirname [ info script ] ] adjust.tcl ]
